mejorando vistas de creacion y edicion

--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/ModificarPersonal.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/personal/ModificarPersonal.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.personal.Modificar">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.personal.ModificarPersonal">
   <grid id="27dc6" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="83a24" layout-manager="GridBagLayout">
+      <grid id="b504d" binding="panel" layout-manager="GridBagLayout">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
@@ -15,7 +15,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="27741" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="2caf0" class="javax.swing.JTextField" binding="campoNombre">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -26,7 +26,7 @@
               <preferredSize width="119" height="30"/>
             </properties>
           </component>
-          <component id="35a37" class="javax.swing.JLabel">
+          <component id="5038b" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -35,16 +35,7 @@
               <text value="Nombre"/>
             </properties>
           </component>
-          <component id="4470c" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="4fbe6" class="javax.swing.JLabel">
+          <component id="5b38e" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -53,16 +44,7 @@
               <text value="Cédula de Identidad"/>
             </properties>
           </component>
-          <component id="ea76" class="javax.swing.JTextField" default-binding="true">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="57c40" class="javax.swing.JLabel">
+          <component id="31a87" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -71,7 +53,7 @@
               <text value="Correo electrónico"/>
             </properties>
           </component>
-          <component id="859d7" class="javax.swing.JLabel">
+          <component id="683a4" class="javax.swing.JLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -80,7 +62,7 @@
               <text value="¿Es fijo?"/>
             </properties>
           </component>
-          <component id="f523d" class="javax.swing.JLabel">
+          <component id="95afb" class="javax.swing.JLabel">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -89,7 +71,7 @@
               <text value="Fecha de fin de contrato"/>
             </properties>
           </component>
-          <component id="a337" class="javax.swing.JLabel">
+          <component id="55ffd" class="javax.swing.JLabel">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -98,7 +80,7 @@
               <text value="Especialidad"/>
             </properties>
           </component>
-          <component id="7d8e7" class="javax.swing.JLabel">
+          <component id="a5032" class="javax.swing.JLabel">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -107,7 +89,7 @@
               <text value="Rol"/>
             </properties>
           </component>
-          <grid id="14bed" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+          <grid id="e55df" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -115,7 +97,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="76172" class="javax.swing.JRadioButton" binding="siRadioButton" default-binding="true">
+              <component id="d24c2" class="javax.swing.JRadioButton" binding="siRadioButton" default-binding="true">
                 <constraints/>
                 <properties>
                   <alignmentX value="0.0"/>
@@ -123,7 +105,13 @@
                   <text value="Si"/>
                 </properties>
               </component>
-              <component id="c988f" class="javax.swing.JRadioButton" binding="noRadioButton" default-binding="true">
+              <hspacer id="49134">
+                <constraints/>
+              </hspacer>
+              <hspacer id="dae53">
+                <constraints/>
+              </hspacer>
+              <component id="23630" class="javax.swing.JRadioButton" binding="noRadioButton" custom-create="true" default-binding="true">
                 <constraints/>
                 <properties>
                   <preferredSize width="41" height="21"/>
@@ -132,7 +120,45 @@
               </component>
             </children>
           </grid>
-          <component id="989e9" class="javax.swing.JFormattedTextField" binding="formattedTextField1" default-binding="true">
+          <component id="43e6f" class="javax.swing.JComboBox" binding="comboboxRol" custom-create="true">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+          </component>
+          <grid id="3af35" layout-manager="FlowLayout" hgap="5" vgap="2" flow-align="1">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="f9e51" class="javax.swing.JComboBox" binding="comboboxCedula" custom-create="true">
+                <constraints/>
+                <properties>
+                  <preferredSize width="78" height="30"/>
+                </properties>
+              </component>
+              <component id="5f438" class="javax.swing.JFormattedTextField" binding="campoCedula" custom-create="true">
+                <constraints/>
+                <properties>
+                  <preferredSize width="99" height="30"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="41ae2" class="javax.swing.JFormattedTextField" binding="campoCorreo" custom-create="true">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="42bda" class="javax.swing.JFormattedTextField" binding="campoFinContrato" custom-create="true">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -141,21 +167,42 @@
             </constraints>
             <properties/>
           </component>
-          <component id="ba19f" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="d35b5" class="javax.swing.JTextField" binding="campoEspecialidad">
             <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
             </constraints>
-            <properties/>
+            <properties>
+              <preferredSize width="119" height="30"/>
+            </properties>
           </component>
-          <component id="2d1c" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+          <grid id="e2ba6" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+              <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
-          </component>
-          <component id="ae14e" class="javax.swing.JLabel">
+            <border type="none"/>
+            <children>
+              <component id="73383" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <preferredSize width="128" height="30"/>
+                  <text value="Cerrar"/>
+                </properties>
+              </component>
+              <component id="9301b" class="javax.swing.JButton" binding="editarButton">
+                <constraints/>
+                <properties>
+                  <preferredSize width="128" height="30"/>
+                  <text value="Editar"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="34ae7" class="javax.swing.JLabel">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -164,7 +211,7 @@
               <text value="¿Está activo?"/>
             </properties>
           </component>
-          <grid id="d23e9" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+          <grid id="9c65" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -172,7 +219,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="97bd3" class="javax.swing.JRadioButton" default-binding="true">
+              <component id="361ae" class="javax.swing.JRadioButton" binding="activoRadioButton">
                 <constraints/>
                 <properties>
                   <alignmentX value="0.0"/>
@@ -180,7 +227,13 @@
                   <text value="Si"/>
                 </properties>
               </component>
-              <component id="9c8e4" class="javax.swing.JRadioButton" default-binding="true">
+              <hspacer id="fc466">
+                <constraints/>
+              </hspacer>
+              <hspacer id="4da8">
+                <constraints/>
+              </hspacer>
+              <component id="2d656" class="javax.swing.JRadioButton" binding="inactivoRadioButton">
                 <constraints/>
                 <properties>
                   <preferredSize width="41" height="21"/>
@@ -193,4 +246,14 @@
       </grid>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="grupoActivo">
+      <member id="2d656"/>
+      <member id="361ae"/>
+    </group>
+    <group name="grupoFijo">
+      <member id="d24c2"/>
+      <member id="23630"/>
+    </group>
+  </buttonGroups>
 </form>
