--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -132,15 +132,6 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="988a6" class="javax.swing.JButton" binding="botonEliminar">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <text value="Eliminar"/>
-                    </properties>
-                  </component>
                   <component id="d7c03" class="javax.swing.JButton" binding="botonAgregar">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -150,12 +141,6 @@
                       <text value="Agregar"/>
                     </properties>
                   </component>
-                  <vspacer id="47add">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
                 </children>
               </grid>
             </children>
@@ -182,25 +167,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="e8551" class="javax.swing.JButton" binding="editarButton2" default-binding="true">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <text value="Editar"/>
-                    </properties>
-                  </component>
-                  <component id="83bdd" class="javax.swing.JButton" binding="eliminarButton1" default-binding="true">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <text value="Eliminar"/>
-                    </properties>
-                  </component>
-                  <component id="99a1b" class="javax.swing.JButton" binding="agregarButton2" default-binding="true">
+                  <component id="99a1b" class="javax.swing.JButton" binding="botonAgregarMaquinaria">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
@@ -209,18 +176,6 @@
                       <text value="Agregar"/>
                     </properties>
                   </component>
-                  <vspacer id="b10b1">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
-                  <vspacer id="8ca7a">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
                 </children>
               </grid>
             </children>
