--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/maquinaria/AgregarMaquinaria.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/maquinaria/AgregarMaquinaria.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.maquinaria.Creacion">
-  <grid id="27dc6" layout-manager="GridBagLayout">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.maquinaria.AgregarMaquinaria">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -16,7 +16,7 @@
           <text value="Nombre"/>
         </properties>
       </component>
-      <component id="365f6" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="365f6" class="javax.swing.JTextField" binding="campoNombre">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -31,7 +31,7 @@
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="Tiempo estimado de uso"/>
+          <text value="Tiempo estimado de uso (en horas)"/>
         </properties>
       </component>
       <component id="c2e20" class="javax.swing.JLabel">
@@ -45,21 +45,21 @@
       </component>
       <component id="d6dd0" class="javax.swing.JLabel">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="Tipo de Maquinaria"/>
         </properties>
       </component>
-      <component id="d2692" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="d2692" class="javax.swing.JComboBox" binding="comboboxTipoMaquinaria" custom-create="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
-      <component id="9417f" class="javax.swing.JFormattedTextField" binding="formattedTextField1" default-binding="true">
+      <component id="9417f" class="javax.swing.JFormattedTextField" binding="campoCostoPorTiempoUso" custom-create="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -68,9 +68,51 @@
         </constraints>
         <properties/>
       </component>
-      <component id="25fff" class="javax.swing.JFormattedTextField" binding="formattedTextField2" default-binding="true">
+      <component id="25fff" class="javax.swing.JFormattedTextField" binding="campoTiempoEstimado" custom-create="true">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
+      </component>
+      <grid id="b6002" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="44225" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <preferredSize width="128" height="30"/>
+              <text value="Cerrar"/>
+            </properties>
+          </component>
+          <component id="54a47" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <preferredSize width="128" height="30"/>
+              <text value="Agregar"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="39d9a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <text value="Costo total"/>
+        </properties>
+      </component>
+      <component id="675bc" class="javax.swing.JFormattedTextField" binding="campoCostoTotal" custom-create="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
