--- a/src/main/java/com/criollo/machmillenium/vistas/emergentes/maquinaria/ModificarMaquinaria.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/emergentes/maquinaria/ModificarMaquinaria.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.maquinaria.Modificacion">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.emergentes.maquinaria.ModificarMaquinaria">
   <grid id="27dc6" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="34f64" layout-manager="GridBagLayout">
+      <grid id="74bef" binding="mainPanel" layout-manager="GridBagLayout">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
@@ -15,7 +15,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="b0696" class="javax.swing.JLabel">
+          <component id="4d5cb" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -24,7 +24,7 @@
               <text value="Nombre"/>
             </properties>
           </component>
-          <component id="399cc" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="8e338" class="javax.swing.JTextField" binding="campoNombre">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -33,16 +33,16 @@
             </constraints>
             <properties/>
           </component>
-          <component id="f3475" class="javax.swing.JLabel">
+          <component id="a7f5f" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
-              <text value="Tiempo estimado de uso"/>
+              <text value="Tiempo estimado de uso (en horas)"/>
             </properties>
           </component>
-          <component id="8be5e" class="javax.swing.JLabel">
+          <component id="4eb10" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
@@ -51,23 +51,23 @@
               <text value="Costo por tiempo de uso"/>
             </properties>
           </component>
-          <component id="6842b" class="javax.swing.JLabel">
+          <component id="151d8" class="javax.swing.JLabel">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Tipo de Maquinaria"/>
             </properties>
           </component>
-          <component id="b725f" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="c42bd" class="javax.swing.JComboBox" binding="comboboxTipoMaquinaria" custom-create="true">
             <constraints>
-              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
           </component>
-          <component id="f5cb6" class="javax.swing.JFormattedTextField" binding="formattedTextField1" default-binding="true">
+          <component id="4cc91" class="javax.swing.JFormattedTextField" binding="campoCostoPorTiempoUso" custom-create="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -76,9 +76,51 @@
             </constraints>
             <properties/>
           </component>
-          <component id="2d778" class="javax.swing.JFormattedTextField" binding="formattedTextField2" default-binding="true">
+          <component id="bef79" class="javax.swing.JFormattedTextField" binding="campoTiempoEstimado" custom-create="true">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+          </component>
+          <grid id="d7c4e" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="da1f" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <preferredSize width="128" height="30"/>
+                  <text value="Cerrar"/>
+                </properties>
+              </component>
+              <component id="d8d35" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <preferredSize width="128" height="30"/>
+                  <text value="Agregar"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="5ef91" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="Costo total"/>
+            </properties>
+          </component>
+          <component id="456d" class="javax.swing.JFormattedTextField" binding="campoCostoTotal" custom-create="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
               <gridbag top="4" left="4" bottom="4" right="4" weightx="0.0" weighty="0.0"/>
